--- a/frontend/src/styles/NewLogin.css
+++ b/frontend/src/styles/NewLogin.css
@@ -11,6 +11,11 @@
 
 .main-container {
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-container,
